refactored a couple of things